v0.3.0/_sources/tutorials/lines.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "tutorials/lines.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_tutorials_lines.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_tutorials_lines.py:


Plot lines
==========

Plotting lines is handled by :meth:`pygmt.Figure.plot`.

.. note::

    This tutorial assumes the use of a Python notebook, such as IPython or Jupyter Notebook.
    To see the figures while using a Python script instead, use
    ``fig.show(method="external)`` to display the figure in the default PDF viewer.

    To save the figure, use ``fig.savefig("figname.pdf")`` where ``"figname.pdf"``
    is the desired name and file extension for the saved figure.

.. GENERATED FROM PYTHON SOURCE LINES 16-19

.. code-block:: default


    import pygmt








.. GENERATED FROM PYTHON SOURCE LINES 21-27

Plot lines
----------

Create a Cartesian figure using ``projection`` argument and set the axis scales
using ``region`` (in this case, each axis is 0-10). Pass a list of ``x`` and ``y``
values to be plotted as a line.

.. GENERATED FROM PYTHON SOURCE LINES 27-39

.. code-block:: default


    fig = pygmt.Figure()
    fig.plot(
        region=[0, 10, 0, 10],
        projection="X25c/20c",
        frame="a",
        x=[1, 8],
        y=[5, 9],
        pen="1p,black",
    )
    fig.show()




.. image:: /tutorials/images/sphx_glr_lines_001.png
    :alt: lines
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <IPython.core.display.Image object>



.. GENERATED FROM PYTHON SOURCE LINES 40-42

Additional line segments can be added by including additional values for ``x``
and ``y``.

.. GENERATED FROM PYTHON SOURCE LINES 42-54

.. code-block:: default


    fig = pygmt.Figure()
    fig.plot(
        region=[0, 10, 0, 10],
        projection="X25c/20c",
        frame="a",
        x=[1, 6, 9],
        y=[5, 7, 4],
        pen="1p,black",
    )
    fig.show()




.. image:: /tutorials/images/sphx_glr_lines_002.png
    :alt: lines
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <IPython.core.display.Image object>



.. GENERATED FROM PYTHON SOURCE LINES 55-58

To plot multiple lines, :meth:`pygmt.Figure.plot` needs to be used for each
additional line. Arguments such as ``region``, ``projection``, and ``frame`` do
not need to be repeated in subsequent uses.

.. GENERATED FROM PYTHON SOURCE LINES 58-71

.. code-block:: default


    fig = pygmt.Figure()
    fig.plot(
        region=[0, 10, 0, 10],
        projection="X25c/20c",
        frame="a",
        x=[1, 6, 9],
        y=[5, 7, 4],
        pen="2p,blue",
    )
    fig.plot(x=[2, 4, 10], y=[3, 8, 9], pen="2p,red")
    fig.show()




.. image:: /tutorials/images/sphx_glr_lines_003.png
    :alt: lines
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <IPython.core.display.Image object>



.. GENERATED FROM PYTHON SOURCE LINES 72-80

Change line attributes
----------------------

The line attributes can be set by the ``pen`` argument. ``pen`` takes a string
argument with the optional values *width*,\ *color*,\ *style*.

In the example below, the pen width is set to ``5p``, and with ``black`` as the
default color and ``solid`` as the default style.

.. GENERATED FROM PYTHON SOURCE LINES 80-92

.. code-block:: default


    fig = pygmt.Figure()
    fig.plot(
        region=[0, 10, 0, 10],
        projection="X25c/20c",
        frame="a",
        x=[1, 8],
        y=[3, 9],
        pen="5p",
    )
    fig.show()




.. image:: /tutorials/images/sphx_glr_lines_004.png
    :alt: lines
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <IPython.core.display.Image object>



.. GENERATED FROM PYTHON SOURCE LINES 93-95

The line color can be set and is added after the line width to the ``pen`` argument.
In the example below, the line color is set to ``red``.

.. GENERATED FROM PYTHON SOURCE LINES 95-107

.. code-block:: default


    fig = pygmt.Figure()
    fig.plot(
        region=[0, 10, 0, 10],
        projection="X25c/20c",
        frame="a",
        x=[1, 8],
        y=[3, 9],
        pen="5p,red",
    )
    fig.show()




.. image:: /tutorials/images/sphx_glr_lines_005.png
    :alt: lines
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <IPython.core.display.Image object>



.. GENERATED FROM PYTHON SOURCE LINES 108-111

The line style can be set and is added after the line width or color to the
``pen`` argument.  In the example below, the line style is set to
``..-`` (*dot dot dash*), and the default color ``black`` is used.

.. GENERATED FROM PYTHON SOURCE LINES 111-123

.. code-block:: default


    fig = pygmt.Figure()
    fig.plot(
        region=[0, 10, 0, 10],
        projection="X25c/20c",
        frame="a",
        x=[1, 8],
        y=[3, 9],
        pen="5p,..-",
    )
    fig.show()




.. image:: /tutorials/images/sphx_glr_lines_006.png
    :alt: lines
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <IPython.core.display.Image object>



.. GENERATED FROM PYTHON SOURCE LINES 124-129

The line width, color, and style can all be set in the same ``pen`` argument. In the
example below, the line width is set to ``7p``, the color is set to ``green``, and the
line style is ``-.-`` (*dash dot dash*).

For a gallery showing other ``pen`` settings, see :doc:`/gallery/line/linestyles`.

.. GENERATED FROM PYTHON SOURCE LINES 129-140

.. code-block:: default


    fig = pygmt.Figure()
    fig.plot(
        region=[0, 10, 0, 10],
        projection="X25c/20c",
        frame="a",
        x=[1, 8],
        y=[3, 9],
        pen="7p,green,-.-",
    )
    fig.show()



.. image:: /tutorials/images/sphx_glr_lines_007.png
    :alt: lines
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <IPython.core.display.Image object>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  11.612 seconds)


.. _sphx_glr_download_tutorials_lines.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: lines.py <lines.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: lines.ipynb <lines.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
