v0.5.0/_sources/tutorials/lines.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "tutorials/lines.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_tutorials_lines.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_tutorials_lines.py:


Plotting lines
==============

Plotting lines is handled by :meth:`pygmt.Figure.plot`.

.. GENERATED FROM PYTHON SOURCE LINES 7-10

.. code-block:: default


    import pygmt








.. GENERATED FROM PYTHON SOURCE LINES 12-18

Plot lines
----------

Create a Cartesian figure using ``projection`` parameter and set the axis
scales using ``region`` (in this case, each axis is 0-10). Pass a list of
``x`` and ``y`` values to be plotted as a line.

.. GENERATED FROM PYTHON SOURCE LINES 18-30

.. code-block:: default


    fig = pygmt.Figure()
    fig.plot(
        region=[0, 10, 0, 10],
        projection="X15c/10c",
        frame="a",
        x=[1, 8],
        y=[5, 9],
        pen="1p,black",
    )
    fig.show()




.. image-sg:: /tutorials/images/sphx_glr_lines_001.png
   :alt: lines
   :srcset: /tutorials/images/sphx_glr_lines_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <IPython.core.display.Image object>




.. GENERATED FROM PYTHON SOURCE LINES 31-33

Additional line segments can be added by including additional values for
``x`` and ``y``.

.. GENERATED FROM PYTHON SOURCE LINES 33-45

.. code-block:: default


    fig = pygmt.Figure()
    fig.plot(
        region=[0, 10, 0, 10],
        projection="X15c/10c",
        frame="a",
        x=[1, 6, 9],
        y=[5, 7, 4],
        pen="1p,black",
    )
    fig.show()




.. image-sg:: /tutorials/images/sphx_glr_lines_002.png
   :alt: lines
   :srcset: /tutorials/images/sphx_glr_lines_002.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <IPython.core.display.Image object>




.. GENERATED FROM PYTHON SOURCE LINES 46-49

To plot multiple lines, :meth:`pygmt.Figure.plot` needs to be used for each
additional line. Arguments such as ``region``, ``projection``, and ``frame``
do not need to be repeated in subsequent uses.

.. GENERATED FROM PYTHON SOURCE LINES 49-62

.. code-block:: default


    fig = pygmt.Figure()
    fig.plot(
        region=[0, 10, 0, 10],
        projection="X15c/10c",
        frame="a",
        x=[1, 6, 9],
        y=[5, 7, 4],
        pen="2p,blue",
    )
    fig.plot(x=[2, 4, 10], y=[3, 8, 9], pen="2p,red")
    fig.show()




.. image-sg:: /tutorials/images/sphx_glr_lines_003.png
   :alt: lines
   :srcset: /tutorials/images/sphx_glr_lines_003.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <IPython.core.display.Image object>




.. GENERATED FROM PYTHON SOURCE LINES 63-71

Change line attributes
----------------------

The line attributes can be set by the ``pen`` parameter. ``pen`` takes a
string argument with the optional values *width*,\ *color*,\ *style*.

In the example below, the pen width is set to ``5p``, and with ``black`` as
the default color and ``solid`` as the default style.

.. GENERATED FROM PYTHON SOURCE LINES 71-83

.. code-block:: default


    fig = pygmt.Figure()
    fig.plot(
        region=[0, 10, 0, 10],
        projection="X15c/10c",
        frame="a",
        x=[1, 8],
        y=[3, 9],
        pen="5p",
    )
    fig.show()




.. image-sg:: /tutorials/images/sphx_glr_lines_004.png
   :alt: lines
   :srcset: /tutorials/images/sphx_glr_lines_004.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <IPython.core.display.Image object>




.. GENERATED FROM PYTHON SOURCE LINES 84-86

The line color can be set and is added after the line width to the ``pen``
parameter. In the example below, the line color is set to ``red``.

.. GENERATED FROM PYTHON SOURCE LINES 86-98

.. code-block:: default


    fig = pygmt.Figure()
    fig.plot(
        region=[0, 10, 0, 10],
        projection="X15c/10c",
        frame="a",
        x=[1, 8],
        y=[3, 9],
        pen="5p,red",
    )
    fig.show()




.. image-sg:: /tutorials/images/sphx_glr_lines_005.png
   :alt: lines
   :srcset: /tutorials/images/sphx_glr_lines_005.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <IPython.core.display.Image object>




.. GENERATED FROM PYTHON SOURCE LINES 99-102

The line style can be set and is added after the line width or color to the
``pen`` parameter.  In the example below, the line style is set to
``..-`` (*dot dot dash*), and the default color ``black`` is used.

.. GENERATED FROM PYTHON SOURCE LINES 102-114

.. code-block:: default


    fig = pygmt.Figure()
    fig.plot(
        region=[0, 10, 0, 10],
        projection="X15c/10c",
        frame="a",
        x=[1, 8],
        y=[3, 9],
        pen="5p,..-",
    )
    fig.show()




.. image-sg:: /tutorials/images/sphx_glr_lines_006.png
   :alt: lines
   :srcset: /tutorials/images/sphx_glr_lines_006.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <IPython.core.display.Image object>




.. GENERATED FROM PYTHON SOURCE LINES 115-121

The line width, color, and style can all be set in the same ``pen``
parameter. In the example below, the line width is set to ``7p``, the color
is set to ``green``, and the line style is ``-.-`` (*dash dot dash*).

For a gallery showing other ``pen`` settings, see
:doc:`/gallery/lines/linestyles`.

.. GENERATED FROM PYTHON SOURCE LINES 121-132

.. code-block:: default


    fig = pygmt.Figure()
    fig.plot(
        region=[0, 10, 0, 10],
        projection="X15c/10c",
        frame="a",
        x=[1, 8],
        y=[3, 9],
        pen="7p,green,-.-",
    )
    fig.show()



.. image-sg:: /tutorials/images/sphx_glr_lines_007.png
   :alt: lines
   :srcset: /tutorials/images/sphx_glr_lines_007.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <IPython.core.display.Image object>





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  6.087 seconds)


.. _sphx_glr_download_tutorials_lines.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: lines.py <lines.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: lines.ipynb <lines.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
